contentbox: restrict wrapping of nav content to 2em in order to prevent display issues (use .nowrap on nav child to prevent items from wrapping), re #6973

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -3540,19 +3540,24 @@ article.studip header h1 > a svg {
   margin-right: 5px;
 }
 article.studip header nav {
-  padding: 2px;
-  display: flex;
   align-items: center;
+  display: flex;
+  padding: 2px;
+  overflow: hidden;
 }
 article.studip header nav > * {
   border-right: 1px solid #899bba;
   padding-right: 4px;
   margin-right: 4px;
+  max-height: 2em;
 }
 article.studip header nav > *:last-child {
   border-right: none;
   padding-right: 0;
   margin-right: 0;
+}
+article.studip header nav > *.nowrap {
+  white-space: nowrap;
 }
 article.studip.toggle > header {
   margin-bottom: -10px;
